# nvdla

./: CMakeLists.txt
kmd/port/linux/: nvdla_core_callbacks.c  nvdla_gem.c
umd/apps/compiler/: CMakeLists.txt
umd/apps/runtime/: CMakeLists.txt
umd/core/src/compiler/: CMakeLists.txt
umd/core/src/runtime/: CMakeLists.txt
